secret Code for user

--- a/BullsAndCows/BullsAndCows.vcxproj
+++ b/BullsAndCows/BullsAndCows.vcxproj
@@ -127,11 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ai_code.cpp" />
+    <ClCompile Include="secret_code.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ai_code.h" />
+    <ClInclude Include="secret_code.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
