--- a/BullsAndCows/BullsAndCows.vcxproj.filters
+++ b/BullsAndCows/BullsAndCows.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ai_code.cpp">
+    <ClCompile Include="secret_code.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ai_code.h">
+    <ClInclude Include="secret_code.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
