--- a/BullsAndCows/BullsAndCows.vcxproj.filters
+++ b/BullsAndCows/BullsAndCows.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="EasyAI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
