--- a/BullsAndCows/BullsAndCows.vcxproj.filters
+++ b/BullsAndCows/BullsAndCows.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="EasyAI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MediumAI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
