updated main file

--- a/BullsAndCows/BullsAndCows.vcxproj
+++ b/BullsAndCows/BullsAndCows.vcxproj
@@ -35,6 +35,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BullsAndCowsGame.cpp" />
     <ClCompile Include="EasyAI.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
