--- a/BullsAndCows/BullsAndCows.vcxproj.filters
+++ b/BullsAndCows/BullsAndCows.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="MediumAI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BullsAndCowsGame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
